--- a/04-Toast-popup/style.css
+++ b/04-Toast-popup/style.css
@@ -41,6 +41,7 @@ button {
     border-radius: 0.25rem;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
     animation: fromLeft 0.1s ease-in;
+    background-color: rgb(47, 255, 106);
 }
 
 .toasts-container.right .toast  {
